--- a/10853张三.html
+++ b/10853张三.html
@@ -15,7 +15,7 @@
 			<header id="header">
 				<p class="logo"><strong>广州市第六中学（花都校区）</strong> 初一（8）班</p>
 				<ul class="icons">
-					<li><a href="../index.html">返回</a></li>
+					<li><a href="index.html">返回</a></li>
 				</ul>
 			</header>
 
